--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyA-19pPkOmEM_6IrbQUVY6uSiNRC8SNRic",
+          authDomain: "css-calculator.firebaseapp.com",
+          projectId: "css-calculator",
+          storageBucket: "css-calculator.appspot.com",
+          messagingSenderId: "680354020175",
+          appId: "1:680354020175:web:6fa8d970897326cd7ae33a",
+          measurementId: "G-FXV6QPJM9G"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 </head>
 <body>
     <main>
